# trip-tracker

./: .env.example  .gitignore  DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  bootstrap.sh  deploy.sh  netlify.toml  pyproject.toml  stop.sh
backend/: .flake8  Procfile  lint.sh  manage.py  pyproject.toml  railway.toml  requirements.txt  start_railway.sh
backend/trip_tracker/: asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
backend/trips/: admin.py  api.py  models.py
backend/trips/fixtures/: trailer.json  truck.json  user_driver.json
backend/trips/migrations/: 0001_initial.py  0002_remove_trip_current_cycle_hours.py
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/manual-testing/: test-dot-events-manual.js
frontend/src/: App.tsx  index.css
frontend/src/__fixtures__/: sorted_timestamps.json
frontend/src/api/: Api.ts
frontend/src/components/: DailyLogsList.tsx  Dashboard.tsx  DashboardHeader.tsx  LogBookDriverInfo.tsx  LogBookPaperForm.tsx  LogBookRemarks.tsx  LogBookTable.tsx  LogBookTotals.tsx  LogBookView.tsx  LoginForm.tsx  MapView.tsx  SimulationResultModal.tsx  SimulationSection.tsx
frontend/src/contexts/: AuthContext.ts  AuthContext.tsx
frontend/src/hooks/: useDotEvents.ts  useDutyStatusTotals.ts  useDutyStatuses.ts  useSimulator.ts
frontend/src/hooks/__tests__/: useDotEvents.test.ts
frontend/src/types/: api.ts
frontend/src/utils/: routeService.ts
